[project]
name = "ml-foundations"
version = "0.1.0"
description = "A comprehensive collection of foundational concepts in mathematics, computer science, and machine learning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Stan Vespie"}
]

dependencies = [
    # Jupyter and notebook support
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    
    # Core ML libraries
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    
    # Math and statistics
    "scipy>=1.11.0",
    "sympy>=1.12",
    
    # Additional utilities
    "tqdm>=4.66.0",
    
    # Development tools
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["utils"]
